--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+t<!DOCTYPE html>
     <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -331,7 +331,7 @@
             <a
               href="https://www.youtube.com/c/Bedimcode/" class="footer__copy-link"
               target="_blank"
-            >&#169; Bedimcode. All right reserved
+            >&#169; Beats. All right reserved
             </a>
           </p>
         </footer>
